fixed stats route
